<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="auto"
            app:summary="@string/pol_update"
            app:title="@string/auto_update" />
    </PreferenceCategory>

    <PreferenceCategory app:iconSpaceReserved="false">
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="theme"
            app:summaryOff="@string/theme_light"
            app:summaryOn="@string/theme_dark"
            app:title="@string/theme_app" />
    </PreferenceCategory>

    <PreferenceCategory app:iconSpaceReserved="false">
        <Preference
            app:iconSpaceReserved="false"
            app:key="favorite"
            app:summary="@string/favorites_valutes"
            app:title="@string/favorites" />
    </PreferenceCategory>
</PreferenceScreen>